tests/positive/function_calls_basic.em
int func() {
    return 5;
}
int main() {
    int x = func();
    return 0;
}