tests/negative/function_calls_basic.em
int main() {
    int x = undefined();
    return 0;
}